--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,12 @@ section {
     transition: ease 0.3s all;
 }
 
+/* Navigation Active State */
+.navbar__menu .menu__link.active {
+    background-color: #f1f1f1;
+    color: #000;
+}
+
 /* Header Styles */
 .page__header {
     background: #fff;
