--- a/css/styles.css
+++ b/css/styles.css
@@ -72,15 +72,15 @@ section {
 }
 
 .navbar__menu .menu__link:hover {
-    background: #333;
+    background: black;
     color: #fff;
     transition: ease 0.3s all;
 }
 
 /* Navigation Active State */
 .navbar__menu .menu__link.active {
-    background-color: #f1f1f1;
-    color: #000;
+    background-color:black;
+    color: white;
 }
 
 /* Header Styles */
